added some test articles

--- a/html/Consensus.html
+++ b/html/Consensus.html
@@ -122,10 +122,7 @@
     </head>
     <body>
         <p>Date: </p>
-<h1 id="fadedbee-blog">FadedBee Blog</h1>
-<h2 id="articles">Articles</h2>
-<p><a href="Postgres-CQRS">Postgres CQRS</a></p>
-<h2 id="topics">Topics</h2>
-<p><a href="VimWiki" class="uri">VimWiki</a> <a href="Consensus" class="uri">Consensus</a> <a href="WireGuard" class="uri">WireGuard</a></p>
+<h1 id="consensus">Consensus</h1>
+<p><a href="Time-Slice-Consensus">Time Slice Consensus</a></p>
     </body>
 </html>
