--- a/html/VimWiki.html
+++ b/html/VimWiki.html
@@ -122,10 +122,7 @@
     </head>
     <body>
         <p>Date: </p>
-<h1 id="fadedbee-blog">FadedBee Blog</h1>
-<h2 id="articles">Articles</h2>
-<p><a href="Postgres-CQRS">Postgres CQRS</a></p>
-<h2 id="topics">Topics</h2>
-<p><a href="VimWiki" class="uri">VimWiki</a> <a href="Consensus" class="uri">Consensus</a> <a href="WireGuard" class="uri">WireGuard</a></p>
+<h1 id="vimwiki">VimWiki</h1>
+<p><a href="Installing-VimWiki">Installing VimWiki</a> <a href="Processing-WimWiki-with-Pandoc">Processing WimWiki with Pandoc</a></p>
     </body>
 </html>
